; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_table.c_rowcolHash.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_table.c_rowcolHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rowcol = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @rowcolHash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rowcolHash(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.rowcol*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = inttoptr i64 %6 to %struct.rowcol*
  store %struct.rowcol* %7, %struct.rowcol** %3, align 8
  %8 = load %struct.rowcol*, %struct.rowcol** %3, align 8
  %9 = getelementptr inbounds %struct.rowcol, %struct.rowcol* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %4, align 4
  %12 = load %struct.rowcol*, %struct.rowcol** %3, align 8
  %13 = getelementptr inbounds %struct.rowcol, %struct.rowcol* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = xor i32 %16, %17
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
